# BeatSaverVoting.Quest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml
assets/: votingUI.bsml
cmake/: kaleb.cmake
include/: Song.hpp  SongVote.hpp  VoteStatus.hpp  _config.h  assets.hpp  config.hpp  hooking.hpp  logging.hpp
include/UI/: VotingUI.hpp
include/Utilities/: PlayedLevelProvider.hpp
scripts/: build.ps1  copy.ps1
src/: SongVote.cpp  VoteStatus.cpp  config.cpp  main.cpp
src/Hooks/: LevelListTableCell_SetDataFromLevelAsync.cpp
src/UI/: VotingUI.cpp
src/Utilities/: PlayedLevelProvider.cpp
